<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:textColor="@color/white"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/Stridx"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:textColor="@color/white"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/StrTime"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/StrSpeed"/>

</LinearLayout >