<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_bike"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="1920px"
        android:layout_height="1080px"
        android:background="@color/light_orange">

        <RelativeLayout
            android:id="@+id/bike_guideLayout"
            android:layout_width="1920px"
            android:layout_height="1080px"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:layout_marginRight="50px"
            android:layout_marginBottom="50px"
            android:background="@drawable/xml_ladar_page"
            android:visibility="visible">

            <ImageView
                android:id="@+id/bike_ImgGuid"
                android:layout_width="720px"
                android:layout_height="620px"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/anim_bike_guide" />

            <ImageView
                android:id="@+id/bike_BtnGuBack"
                android:layout_width="150px"
                android:layout_height="120px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/png_return_unsel" />

            <ImageView
                android:id="@+id/bike_BtnNext"
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/xml_btn_ok" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bike_displayLayout"
            android:layout_width="1920px"
            android:layout_height="1080px"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:layout_marginRight="50px"
            android:layout_marginBottom="50px"
            android:background="@drawable/xml_ladar_page"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/bike_viewData"
                android:layout_width="1200px"
                android:layout_height="800px"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50px"
                android:background="@drawable/xml_bike_big_data_outline"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/bike_spped"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2.0"
                        android:background="@drawable/xml_bike_data_outline">

                        <ImageView
                            android:layout_width="150px"
                            android:layout_height="150px"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/png_bike_speed" />

                        <TextView
                            android:id="@+id/tv_bike_speed"
                            android:layout_width="450px"
                            android:layout_height="300px"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="150px"
                            android:layout_height="150px"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/bike_speed"
                            android:textColor="@color/red" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/bike_freq"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20px"
                        android:layout_weight="3.0"
                        android:background="@drawable/xml_bike_data_outline">

                        <TextView
                            android:layout_width="75px"
                            android:layout_height="75px"
                            android:layout_alignParentRight="true"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/bike_cad"
                            android:textColor="@color/red" />

                        <TextView
                            android:id="@+id/tv_bike_freq_data"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="50px"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="55px"
                            android:layout_height="60px"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/tv_bike_freq_data"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/bike_data_unit"
                            android:textColor="@color/red" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40px"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/bike_distance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3.0"
                        android:background="@drawable/xml_bike_data_outline">

                        <TextView
                            android:layout_width="75px"
                            android:layout_height="75px"
                            android:layout_alignParentRight="true"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/bike_dis"
                            android:textColor="@color/red" />

                        <TextView
                            android:id="@+id/tv_bike_dis"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="50px"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="55px"
                            android:layout_height="60px"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/tv_bike_dis"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/bike_km"
                            android:textColor="@color/red" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/bike_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20px"
                        android:layout_weight="2.0"
                        android:background="@drawable/xml_bike_data_outline">

                        <ImageView
                            android:layout_width="150px"
                            android:layout_height="150px"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/png_bike_time" />

                        <TextView
                            android:id="@+id/tv_bike_time"
                            android:layout_width="500px"
                            android:layout_height="250px"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="50px"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:textColor="@color/white" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/bike_viewGraphic"
                android:layout_width="1200px"
                android:layout_height="1080px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:visibility="invisible">

                <RelativeLayout
                    android:id="@+id/tv_bike_data"
                    android:layout_width="500px"
                    android:layout_height="250px"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/xml_bike_freq_outline">

                    <TextView
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="20px"
                        android:autoSizeTextType="uniform"
                        android:text="@string/bike_data_title"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_bike_freq"
                        android:layout_width="350px"
                        android:layout_height="150px"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="150px"
                        android:layout_height="150px"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:autoSizeTextType="uniform"
                        android:text="@string/bike_data_unit"
                        android:textColor="@color/black" />
                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="600px"
                android:layout_height="1080px"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/bike_viewData">

                <ImageView
                    android:id="@+id/bike_BtnReturn"
                    android:layout_width="150px"
                    android:layout_height="120px"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/png_return_unsel" />

                <LinearLayout
                    android:id="@+id/bike_CtrLayout"
                    android:layout_width="600px"
                    android:layout_height="375px"
                    android:layout_below="@+id/bike_BtnReturn"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bike_btnRing"
                        android:layout_width="250px"
                        android:layout_height="250px"
                        android:layout_gravity="center"
                        android:background="@drawable/xml_btn_bike" />

                    <RelativeLayout
                        android:layout_width="300px"
                        android:layout_height="100px"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/bike_BtnOn"
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_alignParentLeft="true"
                            android:layout_gravity="center"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/Lada_on"
                            android:textColor="@color/xml_lada_on"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/bike_tv_and"
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/bike_BtnOn"
                            android:gravity="center"
                            android:text="@string/Lada_and"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/bike_BtnOff"
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/bike_tv_and"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/Lada_off"
                            android:textColor="@color/xml_lada_off"
                            android:textSize="20dp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bike_btnDel"
                    android:layout_width="600px"
                    android:layout_height="450px"
                    android:layout_below="@+id/bike_CtrLayout"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="250px"
                        android:layout_height="250px"
                        android:layout_gravity="center"
                        android:background="@drawable/xml_btn_del" />

                    <TextView
                        android:layout_width="300px"
                        android:layout_height="100px"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:text="@string/cnt_del"
                        android:textColor="@color/xml_cnt_del"
                        android:textSize="20dp" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>