<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen_measure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="1920px"
        android:layout_height="1080px"
        android:background="@color/light_orange">

        <RelativeLayout
            android:id="@+id/mea_displayLayout"
            android:layout_width="1920px"
            android:layout_height="1080px"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:layout_marginRight="50px"
            android:layout_marginBottom="50px"
            android:background="@drawable/xml_ladar_page"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/men_leftLayout"
                android:layout_width="1200px"
                android:layout_height="1080px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="1000px"
                    android:layout_height="1080px"
                    android:layout_marginLeft="50px"
                    android:layout_marginTop="50px"
                    android:orientation="vertical">

                    <View
                        style="@style/list_item_seperator_layout" />

                    <include layout="@layout/mea_list_title"/>

                    <View
                        style="@style/list_item_seperator_layout" />

                    <ListView
                        android:id="@+id/mea_listView"
                        android:layout_width="1000px"
                        android:layout_height="700px"
                        android:background="@color/blackAlpha"
                        android:divider="@color/gray"
                        android:dividerHeight="1.0dp"
                        android:scrollbars="vertical" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="500px"
                android:layout_height="1080px"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/men_leftLayout">

                <ImageView
                    android:id="@+id/mea_BtnReturn"
                    android:layout_width="150px"
                    android:layout_height="120px"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/png_return_unsel" />

                <LinearLayout
                    android:id="@+id/mea_CtrLayout"
                    android:layout_width="600px"
                    android:layout_height="375px"
                    android:layout_below="@+id/mea_BtnReturn"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mea_btnRing"
                        android:layout_width="250px"
                        android:layout_height="250px"
                        android:layout_gravity="center"
                        android:background="@drawable/xml_btn_sen" />

                    <RelativeLayout
                        android:layout_width="300px"
                        android:layout_height="100px"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/mea_BtnOn"
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_alignParentLeft="true"
                            android:layout_gravity="center"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/Lada_on"
                            android:textColor="@color/xml_lada_on"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/mea_tv_and"
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/mea_BtnOn"
                            android:gravity="center"
                            android:text="@string/Lada_and"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/mea_BtnOff"
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/mea_tv_and"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/Lada_off"
                            android:textColor="@color/xml_lada_off"
                            android:textSize="20dp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mea_btnDel"
                    android:layout_width="600px"
                    android:layout_height="450px"
                    android:layout_below="@+id/mea_CtrLayout"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="250px"
                        android:layout_height="250px"
                        android:layout_gravity="center"
                        android:background="@drawable/xml_btn_del" />

                    <TextView
                        android:layout_width="300px"
                        android:layout_height="100px"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:text="@string/cnt_del"
                        android:textColor="@color/xml_cnt_del"
                        android:textSize="20dp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>