<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_sensor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="1920px"
        android:layout_height="1080px"
        android:background="@color/light_orange">

    <RelativeLayout
        android:id="@+id/sen_guideLayout"
        android:layout_width="1920px"
        android:layout_height="1080px"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:layout_marginBottom="50px"
        android:background="@drawable/xml_ladar_page">
        <ImageView
            android:id="@+id/sen_ImgGuid"
            android:layout_width="1400px"
            android:layout_height="900px"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/anim_sen_guide"/>
        <ImageView
            android:id="@+id/sen_BtnNext"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/xml_btn_ok" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sen_displayLayout"
        android:layout_width="1920px"
        android:layout_height="1080px"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:layout_marginBottom="50px"
        android:visibility="invisible"
        android:background="@drawable/xml_ladar_page">

        <RelativeLayout
            android:layout_width="1200px"
            android:layout_height="1080px"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">

            <ListView
                android:id="@+id/sen_listView"
                android:layout_width="800px"
                android:layout_height="800px"
                android:layout_centerInParent="true"
                android:divider="@color/gray"
                android:dividerHeight="1.0dp"
                android:background="@color/blackAlpha"
                android:scrollbars="vertical"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="500px"
            android:layout_height="1080px"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/sen_BtnReturn"
                android:layout_width="150px"
                android:layout_height="120px"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/png_return_unsel" />

            <ImageView
                android:id="@+id/sen_btnRing"
                android:layout_width="500px"
                android:layout_height="500px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="50px"
                android:background="@drawable/xml_btn_lada" />

            <TextView
                android:id="@+id/sen_BtnOff"
                android:layout_width="225px"
                android:layout_height="150px"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/sen_btnRing"
                android:text="@string/Lada_off"
                android:gravity="center"
                android:textSize="20dp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/xml_lada_off"/>
            <TextView
                android:id="@+id/sen_tv_and"
                android:layout_width="50px"
                android:layout_height="150px"
                android:layout_below="@+id/sen_btnRing"
                android:gravity="center"
                android:layout_toLeftOf="@+id/sen_BtnOff"
                android:text="@string/Lada_and"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/sen_BtnOn"
                android:layout_width="225px"
                android:layout_height="150px"
                android:layout_below="@+id/sen_btnRing"
                android:layout_toLeftOf="@+id/sen_tv_and"
                android:text="@string/Lada_on"
                android:gravity="center"
                android:textSize="20dp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/xml_lada_on"/>

        </RelativeLayout>
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>